--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
-  <script src="player.js"></script>  
+  <script src="player.js"></script>
+  <script src="bullet.js"></script>
   <script src="debugConsole.js"></script>
   <script src="sketch.js"></script>
 </body>
