--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <script src="bullet.js"></script>
   <script src="debugConsole.js"></script>
   <script src="sketch.js"></script>
+  <script src="Enemy.js"></script>
+  <script src="EnemyBullet.js"></script>
 </body>
 </html>
